# gyroflow

./: .gitignore  Cargo.toml  Justfile  build.rs  int8_analysis.txt  onnxruntime_profile__2026-04-11_12-06-01.json  onnxruntime_profile__2026-04-11_12-06-20.json  vercel.json
.cargo/: config.toml
.github/workflows/: data-release.yml  publish_action_build.yml  release.yml
_deployment/: sdk-r2-mirror-inventory.json
_deployment/android/: AndroidManifest.xml
_deployment/ios/: Info.plist
_deployment/linux/: AppImageBuilder.yml
_deployment/windows/: gyroflow-niyien-setup.iss
_deployment/windows/languages/: ChineseSimplified.isl  ChineseTraditional.isl
_scripts/: android.just  common.just  ios.just  linux.just  macos.just  mirror_sdk_to_r2.py  niyien_version.py  package_data.py  package_lens.py  patch_tablelist_translations.py  patch_translations_batch_sync_prompts.py  patch_translations_continue_button.py  patch_translations_sync_complete.py  publish_pan123_release.py  read_distribution_config.py  test_mirror_sdk_to_r2.py  test_neuflow_perf.py  translate_unfinished.py  verify_translations_sync_complete.py  windows.just
api/: _distribution.js  manifest.js  telemetry.js
distribution/: DEPLOYMENT.md  control_center.example.json  control_center.py  control_center_setup_guide_zh.md  niyien.toml
distribution/control_center/: README.md  control_center.example.json  control_center.py  control_center.pyw  control_center_setup_guide_zh.md
distribution/control_center/_legacy/: control_center_legacy_tkinter.py
distribution/control_center/backend/: __init__.py  api.py  cargo.py  config.py  git.py  github.py  helpers.py  pan123.py  telemetry.py  vercel.py
distribution/docs_control_plane_templates/: README.md  fix_findings_p1_p2.md
distribution/log_center/: README.md  log_center.example.json  log_center.py  log_center.pyw  requirements.txt
resources/anamorphic_presets/: aivascope_58mm_1_50x_vertical.json  blazar_mantis_25mm_1_33x.json  blazar_remus_45mm_1_50x.json  blazar_viper_35mm_1_50x.json  blazar_viper_75mm_1_50x.json  index.json  laowa_nanomorph_35mm_t2_4_1_50x.json  sirui_35mm_f1_8_1_33x.json  sirui_astra_50mm_1_33x.json  sirui_saturn_35mm_t2_9_1_60x.json  sirui_saturn_50mm_t2_9_1_60x.json
resources/mounting/: generate_svgs.py
resources/translations/: cs.qm  cs.ts  da.qm  da.ts  de.qm  de.ts  el.qm  el.ts  es.qm  es.ts  fi.qm  fi.ts  fr.qm  fr.ts  gl.qm  gl.ts  gyroflow.ts  id.qm  id.ts  it.qm  it.ts  ja.qm  ja.ts  ko.qm  ko.ts  no.qm  no.ts  pl.qm  pl.ts  pt.qm  pt.ts  pt_BR.qm  pt_BR.ts  ru.qm  ru.ts  sk.qm  sk.ts  tr.qm  tr.ts  uk.qm  (+5 more)
scripts/: neuflow_convert.py  neuflow_diagnose.py  neuflow_export_onnx.py  neuflow_infer.py  neuflow_postprocess_f32_guards.py  neuflow_quantize.py  neuflow_verify.py
src/: cli.rs  controller.rs  crash.rs  distribution.rs  gyroflow.rs  logger.rs  network.rs  nle_plugins.rs  resources.rs  resources_qml.rs  util.rs
src/core/: Cargo.toml  anamorphic_presets.rs  build.rs  camera_identifier.rs  distribution.rs  filtering.rs  gyro_export.rs  gyro_match.rs  keyframes.rs  lens_profile.rs  lens_profile_database.rs  lib.rs  log_context.rs  log_throttle.rs  neuflow.rs  niyien_lens_presets.rs  settings.rs  smooth_diag.rs  smooth_diag_plot.py  stabilization_params.rs  stmap.rs  util.rs
src/core/calibration/: drawing.rs  mod.rs
src/core/filesystem/: android.rs  apple.rs  mod.rs
src/core/gpu/: drawing.rs  mod.rs  opencl.rs  opencl_undistort.cl  wgpu.rs  wgpu_interop.rs  wgpu_interop_cuda.rs  wgpu_interop_directx.rs  wgpu_interop_metal.rs  wgpu_interop_vulkan.rs  wgpu_undistort.wgsl
src/core/gpu/stabilize_spirv/src/: background.rs  drawing.rs  interpolate.rs  lens.rs  lib.rs  stabilize.rs  types.rs
src/core/gpu/stabilize_spirv/src/distortion_models/: digital_stretch.rs  gopro_hyperview.rs  gopro_superview.rs  insta360.rs  mod.rs  opencv_fisheye.rs  opencv_standard.rs  poly3.rs  poly5.rs  ptlens.rs  sony.rs
src/core/gyro_source/: canon.rs  file_metadata.rs  imu_transforms.rs  mod.rs  sony.rs  splines.rs
src/core/imu_integration/: complementary.rs  complementary_v2.rs  mod.rs  vqf.rs
src/core/neuflow_burn/: mod.rs  neuflow_v2_clean.rs
src/core/neuflow_burn/generated_iter3/: neuflow_v2_iter3_768x432.rs
src/core/neuflow_burn/generated_iter5/: neuflow_v2_iter5_768x432.rs
src/core/neuflow_burn/generated_mixed/: neuflow_v2_mixed_fp16.rs
src/core/smoothing/: default_algo.rs  fixed.rs  horizon.rs  mod.rs  none.rs  plain.rs
src/core/stabilization/: compute_params.rs  cpu_undistort.rs  frame_transform.rs  mod.rs  pixel_formats.rs
src/core/stabilization/distortion_models/: digital_stretch.rs  gopro6_superview.rs  gopro_hyperview.rs  gopro_superview.rs  insta360.rs  mod.rs  opencv_fisheye.rs  opencv_standard.rs  poly3.rs  poly5.rs  ptlens.rs  sony.rs
src/core/synchronization/: autosync.rs  mod.rs  optimsync.rs  sync_diag.rs  sync_perf.rs  sync_repair.rs
src/core/synchronization/estimate_pose/: almeida.rs  eight_point.rs  find_essential_mat.rs  find_homography.rs  mod.rs
src/core/synchronization/find_offset/: essential_matrix.rs  rs_sync.rs  visual_features.rs
src/core/synchronization/optical_flow/: akaze.rs  mod.rs  neuflow.rs  neuflow.rs.nv12_backup  neuflow_burn.rs  neuflow_burn.rs.nv12_backup  neuflow_ort.rs  neuflow_ort.rs.nv12_backup  opencv_dis.rs  opencv_pyrlk.rs
src/core/zooming/: fov_iterative.rs  mod.rs  zoom_dynamic.rs
src/external_sdk/: braw.rs  ffmpeg_gpl.rs  mod.rs  r3d.rs
src/feedback/: crash_pickup.rs  meta.rs  mod.rs  packager.rs  uploader.rs
src/niyien_device/: commands.rs  mobile_backend.rs  mod.rs  ota.rs  protocol.rs  serial_backend.rs  transport.rs  update_checker.rs
src/qt_gpu/: qrhi_undistort.rs  undistort.frag
src/rendering/: audio_resampler.rs  ffmpeg_android.rs  ffmpeg_audio.rs  ffmpeg_hw.rs  ffmpeg_processor.rs  ffmpeg_video.rs  ffmpeg_video_converter.rs  gpu_codec_blocklist.rs  mdk_processor.rs  mod.rs  render_queue.rs  video_processor.rs  zero_copy.rs
src/ui/: App.qml  DropRules.js  RenderQueue.qml  VideoArea.qml  main_window.qml  qmldir  ui_tools.rs
src/ui/menu/: qmldir  (+15 more)
(+64 files in other folders)
