[package]
name = "gyroflow"
version.workspace = true
authors = ["Adrian <adrian.eddy@gmail.com>", "Elvin Chen"]
edition = "2024"
build = "build.rs"

[workspace]
members = ["src/core"]

[workspace.package]
version = "1.6.3"

[features]
default = ["opencv", "niyien-serialport"]
opencl = ["gyroflow-core/use-opencl"]
opencv = ["gyroflow-core/use-opencv"]
niyien-serialport = ["dep:serialport"]
neuflow = ["gyroflow-core/neuflow", "neuflow-ort", "neuflow-burn"]
neuflow-ort = ["gyroflow-core/neuflow-ort"]
neuflow-burn = ["gyroflow-core/neuflow-burn"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
gyroflow-core = { path = "src/core/", features = ["use-opencv", "use-opencl"] }
system_shutdown = "4.1"
breakpad-sys = "0.2.0"
trash = "5.2"
serialport = { version = "4.7.0", optional = true, default-features = false }
# For nle_plugins
zip = { version = "8.4", default-features = false, features = ["deflate-flate2"] }
zip-extensions = { version = "0.14", default-features = false, features = ["deflate-flate2"] }
runas = "1.2"
tempfile = "3"
fs_extra = "1.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading"] }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
gyroflow-core = { path = "src/core/", features = ["use-opencv"] }
zip = { version = "8.4", default-features = false, features = ["deflate-flate2"] }

[dependencies]
cstr = "0.2.12"
cpp = "0.5.9"
serde = "1.0"
serde_json = "1.0"
ciborium = "0.2.2"
bytemuck = "1.25"
nalgebra = "0.34"
semver = "1.0.27"
sha2 = "0.10"
fastrand = "2.1.0"
itertools = "0.14.0"
regex = "1.12"
rayon = "1.10"
mimalloc = { version = "0.1.48", default-features = false }

pollster = "0.4.0"
futures-intrusive = "0.5.0"
flate2 = "1.1"
walkdir = "2.5.0"
mp4-merge = "0.1.10"
human-sort = "0.2.2"
argh = "0.1.19"
indicatif = "0.18"
rustfft = "6.4.1"
crc32fast = "1.5.0"
rodio = { default-features = false, features = ["vorbis", "playback"], version = "0.22" }
filetime_creation = "0.2"

qmetaobject = { version = "0.2.10", default-features = false, features = ["log"] }
qttypes     = { version = "0.2.12", default-features = false, features = ["required", "qtquick", "qtquickcontrols2"]}
qml-video-rs = { git = "https://github.com/NiYien/qml-video-rs", rev = "fa7007b09fed853aa6c958a4472f26d9c1f0e1c6" }

ffmpeg-next = { version = "8.1.0", default-features = false, features = ["codec", "filter", "format", "software-resampling", "software-scaling"] }
lazy_static = "1.5.0"
parking_lot = "0.12.5"

simplelog = "0.12.2"
log = "0.4"

ureq = "3.2"
url = "2.5.7"
whoami = "2.1"
tar = "0.4.45"
lru = "0.16"
chrono = "0.4"
toml = "0.9"

log-panics = { version = "2.1", features = ["with-backtrace"] }

# Logging infrastructure (Phase 1 of feedback system)
uuid = { version = "1", features = ["v4"] }
percent-encoding = "2"

# Feedback submission (Phase 4 of feedback system)
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
os_info = { version = "3", default-features = false }
thiserror = "2"
md-5 = "0.10"

keep-awake = { git = "https://github.com/AdrianEddy/keep-awake-rs.git", rev = "4f2a93f" }

[patch.crates-io]
qmetaobject = { git = "https://github.com/AdrianEddy/qmetaobject-rs.git", rev = "ff1e23d" }
qttypes     = { git = "https://github.com/AdrianEddy/qmetaobject-rs.git", rev = "ff1e23d" }
cubecl = { git = "https://github.com/tracel-ai/cubecl", rev = "34625c911c3e07b0438d91bea9af0f2233050589" }
cubecl-common = { git = "https://github.com/tracel-ai/cubecl", rev = "34625c911c3e07b0438d91bea9af0f2233050589" }
cubecl-core = { git = "https://github.com/tracel-ai/cubecl", rev = "34625c911c3e07b0438d91bea9af0f2233050589" }
cubecl-cpp = { git = "https://github.com/tracel-ai/cubecl", rev = "34625c911c3e07b0438d91bea9af0f2233050589" }
cubecl-cpu = { git = "https://github.com/tracel-ai/cubecl", rev = "34625c911c3e07b0438d91bea9af0f2233050589" }
cubecl-cuda = { git = "https://github.com/tracel-ai/cubecl", rev = "34625c911c3e07b0438d91bea9af0f2233050589" }
cubecl-hip = { git = "https://github.com/tracel-ai/cubecl", rev = "34625c911c3e07b0438d91bea9af0f2233050589" }
cubecl-ir = { git = "https://github.com/tracel-ai/cubecl", rev = "34625c911c3e07b0438d91bea9af0f2233050589" }
cubecl-macros = { git = "https://github.com/tracel-ai/cubecl", rev = "34625c911c3e07b0438d91bea9af0f2233050589" }
cubecl-macros-internal = { git = "https://github.com/tracel-ai/cubecl", rev = "34625c911c3e07b0438d91bea9af0f2233050589" }
cubecl-opt = { git = "https://github.com/tracel-ai/cubecl", rev = "34625c911c3e07b0438d91bea9af0f2233050589" }
cubecl-runtime = { git = "https://github.com/tracel-ai/cubecl", rev = "34625c911c3e07b0438d91bea9af0f2233050589" }
cubecl-spirv = { git = "https://github.com/tracel-ai/cubecl", rev = "34625c911c3e07b0438d91bea9af0f2233050589" }
cubecl-std = { git = "https://github.com/tracel-ai/cubecl", rev = "34625c911c3e07b0438d91bea9af0f2233050589" }
cubecl-wgpu = { git = "https://github.com/tracel-ai/cubecl", rev = "34625c911c3e07b0438d91bea9af0f2233050589" }
cubecl-zspace = { git = "https://github.com/tracel-ai/cubecl", rev = "34625c911c3e07b0438d91bea9af0f2233050589" }
cubek = { git = "https://github.com/tracel-ai/cubek", rev = "aaa8b1276650e688ac6f46701af1e79cf1c5d112" }
cubek-attention = { git = "https://github.com/tracel-ai/cubek", rev = "aaa8b1276650e688ac6f46701af1e79cf1c5d112" }
cubek-convolution = { git = "https://github.com/tracel-ai/cubek", rev = "aaa8b1276650e688ac6f46701af1e79cf1c5d112" }
cubek-fft = { git = "https://github.com/tracel-ai/cubek", rev = "aaa8b1276650e688ac6f46701af1e79cf1c5d112" }
cubek-matmul = { git = "https://github.com/tracel-ai/cubek", rev = "aaa8b1276650e688ac6f46701af1e79cf1c5d112" }
cubek-quant = { git = "https://github.com/tracel-ai/cubek", rev = "aaa8b1276650e688ac6f46701af1e79cf1c5d112" }
cubek-random = { git = "https://github.com/tracel-ai/cubek", rev = "aaa8b1276650e688ac6f46701af1e79cf1c5d112" }
cubek-reduce = { git = "https://github.com/tracel-ai/cubek", rev = "aaa8b1276650e688ac6f46701af1e79cf1c5d112" }
cubek-std = { git = "https://github.com/tracel-ai/cubek", rev = "aaa8b1276650e688ac6f46701af1e79cf1c5d112" }
cubek-test-utils = { git = "https://github.com/tracel-ai/cubek", rev = "aaa8b1276650e688ac6f46701af1e79cf1c5d112" }

[patch."https://github.com/tracel-ai/burn"]
burn-cubecl = { path = "vendor/burn-compat/burn-cubecl" }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.62"
features = [ "Win32_System_Com", "Win32_System_Console", "Win32_System_SystemServices", "Win32_UI_Shell", "Win32_Foundation", "Wdk_Foundation", "Win32_System_LibraryLoader",
             "Win32_Graphics_Dwm", "Win32_Graphics_Direct3D", "Win32_Graphics_Direct3D11", "Win32_Graphics_Dxgi_Common", "Win32_Graphics_Dxgi",
             "Win32_Security", "Win32_Security_Authorization", "Win32_System_WindowsProgramming", "Win32_System_Threading", "Win32_System_Registry",
             "Win32_Storage_Packaging_Appx", "Win32_Storage_FileSystem" ]

[target.'cfg(target_os = "macos")'.dependencies]
oslog = "0.2"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
objc2 = "0.6"
objc2-metal = "0.3"

[build-dependencies]
cpp_build = "0.5.9"
winres = "0.1.12"
walkdir = "2.5.0"
cc = "1.2"

[[bin]]
name = "gyroflow"
path = "src/gyroflow.rs"

[profile.profile]
inherits = "release"
debug = true

[profile.deploy]
inherits = "release"
lto = true
codegen-units = 1

[dev-dependencies]
test-case = "3.3.1"
tempfile = "3"

# -------------------------- Android stuff --------------------------

# [lib]
# crate-type = ["cdylib"]
# name = "gyroflow"
# path = "src/gyroflow.rs"

[package.metadata.android]
build_targets = [ "aarch64-linux-android" ]

[package.metadata.android.sdk]
min_sdk_version = 26
target_sdk_version = 35

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.22"
ndk = { version = "0.9", features = ["media", "api-level-26"] }
ndk-sys = { version = "0.6.0" }
ndk-context = "0.1.1"
