[package]
name = "gyroflow-core"
version = "1.6.3"
authors = ["Adrian <adrian.eddy@gmail.com>", "Elvin Chen"]
edition = "2024"
build = "build.rs"

[lib]
name = "gyroflow_core"
path = "lib.rs"

[dependencies]
telemetry-parser = { path = "../../../telemetry-parser" }
#telemetry-parser = { git = "https://github.com/AdrianEddy/telemetry-parser.git", rev = "2f4218b" }
#ahrs = { version = "0.5.0", features = ["field_access"] }
ahrs = { version = "0.8", features = ["field_access"] }

stabilize_spirv = { path = "./gpu/stabilize_spirv" }

#rs-sync = { path = "../../../rs-sync" }
rs-sync = { git = "https://github.com/NiYien/rs-sync.git", rev = "0644253" }

argmin = { version = "0.11.0", default-features = false }
argmin-math = { version = "0.5.1", default-features = false, features = ["nalgebra_v0_34"] }

nalgebra = { version = "0.34", features = ["serde-serialize"] }
rayon = "1.11"
biquad = "0.6.0"
fastrand = "2.3.0"
lazy_static = "1.5.0"
parking_lot = "0.12.5"
regex = "1.12"
bincode = { version = "2.0", features = ["serde"] }
serde = "1.0"
serde_json = "1.0"
toml = "0.9"
crc32fast = "1.5.0"
byteorder = "1.5.0"
line_drawing = "1.0.1"
rand = "0.10.1"
time = { version = "0.3.47", features = ["local-offset"] }
itertools = "0.14.0"
num = "0.4.3"
base91 = "0.1.0"
bitflags = "2.11"
enum_delegate = "0.2.0"
simple-easing = "1.0.2"
half = "2.7"
lru = "0.16"
thiserror = "2.0.18"
ciborium = "0.2.2"
dyn-clone = "1.0"
app_dirs2 = { git = "https://github.com/app-dirs-rs/app_dirs2.git", version = "2.5" }
whoami = "2.1"

akaze = { version = "*", git = "https://github.com/rust-cv/cv.git", rev = "d271a9a", features = ["rayon"] }
eight-point = { version = "*", git = "https://github.com/rust-cv/cv.git", rev = "d271a9a" }
cv-pinhole = { version = "*", git = "https://github.com/rust-cv/cv.git", rev = "d271a9a" }
cv-core = { version = "*", git = "https://github.com/rust-cv/cv.git", rev = "d271a9a" }
sample-consensus = "1.0.2"
arrsac = "0.11"
rand_xoshiro = "0.7.0"
image = { version = "0.25", default-features = false }
space = { version = "0.17", features = ["alloc"] }
bitarray = { version = "0.9", features = ["space"] }
enterpolation = "0.3.0"
libloading = "0.9"
libc = "0.2"
bytemuck = "1.25"
ash = "0.38.0"
pollster = "0.4.0"
futures-intrusive = "0.5.0"
flate2 = "1.1"
walkdir = "2.5.0"
url = "2.5.8"
urlencoding = "2.1.3"
log = "0.4"
ocl = { version = "0.19.7", optional = true }
ocl-interop = { version = "0.1.6", optional = true }
rustfft = "6.4.1"
exr = "1.74"
opencv = { version = "0.98", default-features = false, features = [ "calib3d", "features2d", "imgproc", "optflow", "clang-runtime" ], optional = true } #"imgcodecs","objdetect","sfm",
median = "0.3"

wgpu = { version = "29", features = ["spirv", "naga-ir"] }
ort = { version = "2.0.0-rc.12", optional = true, default-features = false, features = ["std", "ndarray", "load-dynamic", "api-24"] }
neuflow-trace-shared = { path = "../../vendor/neuflow-trace/neuflow-trace-shared" }

# Burn framework for NeuFlow v2 inference (Vulkan/Metal backend)
burn-store = { git = "https://github.com/tracel-ai/burn", rev = "b62be4dd7da92c90e31b79c854b161b4d011a7e3", default-features = false, features = ["std", "burnpack"], optional = true }
cubecl-runtime = { version = "=0.10.0-pre.3", default-features = false, features = ["std"], optional = true }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
objc2 = "0.6"
objc2-metal = "0.3"
objc2-core-foundation = "0.3"
objc2-foundation = "0.3"
burn = { git = "https://github.com/tracel-ai/burn", rev = "b62be4dd7da92c90e31b79c854b161b4d011a7e3", default-features = false, features = ["std", "wgpu", "metal", "autotune", "fusion"], optional = true }

[target.'cfg(not(any(target_os = "macos", target_os = "ios")))'.dependencies]
burn = { git = "https://github.com/tracel-ai/burn", rev = "b62be4dd7da92c90e31b79c854b161b4d011a7e3", default-features = false, features = ["std", "wgpu", "vulkan", "autotune", "fusion"], optional = true }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.62"
features = [ "Win32_System_Com", "Win32_System_Console", "Win32_System_SystemServices", "Win32_UI_Shell", "Win32_Foundation", "Wdk_Foundation", "Win32_System_LibraryLoader",
             "Win32_Graphics_Dwm", "Win32_Graphics_Direct3D", "Win32_Graphics_Direct3D11", "Win32_Graphics_Dxgi_Common", "Win32_Graphics_Dxgi",
             "Win32_Security", "Win32_Security_Authorization", "Win32_System_WindowsProgramming", "Win32_System_Threading", "Win32_System_Registry",
             "Win32_Storage_Packaging_Appx", "Win32_Storage_FileSystem" ]

[features]
default = []
use-opencl = ["ocl", "ocl-interop"]
use-opencv = ["opencv"]
bundle-lens-profiles = []
cache-gyro-metadata = []
neuflow-ort = ["dep:ort"]
neuflow-burn = ["dep:burn", "dep:burn-store", "dep:cubecl-runtime"]
neuflow = ["neuflow-ort", "neuflow-burn"]

[profile.deploy]
inherits = "release"
lto = true
codegen-units = 1

[profile.profile]
inherits = "release"
debug = true

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.22"
ndk = { version = "0.9.0", features = ["media", "api-level-26"] }
ndk-sys = { version = "0.6.0" }
ndk-context = { version = "0.1.1" }
burn = { git = "https://github.com/tracel-ai/burn", rev = "b62be4dd7da92c90e31b79c854b161b4d011a7e3", default-features = false, features = ["std", "wgpu", "vulkan", "autotune", "fusion"], optional = true }
burn-store = { git = "https://github.com/tracel-ai/burn", rev = "b62be4dd7da92c90e31b79c854b161b4d011a7e3", default-features = false, features = ["std", "burnpack"], optional = true }

[patch.crates-io]
cubecl = { git = "https://github.com/tracel-ai/cubecl", rev = "34625c911c3e07b0438d91bea9af0f2233050589" }
cubecl-common = { git = "https://github.com/tracel-ai/cubecl", rev = "34625c911c3e07b0438d91bea9af0f2233050589" }
cubecl-core = { git = "https://github.com/tracel-ai/cubecl", rev = "34625c911c3e07b0438d91bea9af0f2233050589" }
cubecl-cpp = { git = "https://github.com/tracel-ai/cubecl", rev = "34625c911c3e07b0438d91bea9af0f2233050589" }
cubecl-cpu = { git = "https://github.com/tracel-ai/cubecl", rev = "34625c911c3e07b0438d91bea9af0f2233050589" }
cubecl-cuda = { git = "https://github.com/tracel-ai/cubecl", rev = "34625c911c3e07b0438d91bea9af0f2233050589" }
cubecl-hip = { git = "https://github.com/tracel-ai/cubecl", rev = "34625c911c3e07b0438d91bea9af0f2233050589" }
cubecl-ir = { git = "https://github.com/tracel-ai/cubecl", rev = "34625c911c3e07b0438d91bea9af0f2233050589" }
cubecl-macros = { git = "https://github.com/tracel-ai/cubecl", rev = "34625c911c3e07b0438d91bea9af0f2233050589" }
cubecl-macros-internal = { git = "https://github.com/tracel-ai/cubecl", rev = "34625c911c3e07b0438d91bea9af0f2233050589" }
cubecl-opt = { git = "https://github.com/tracel-ai/cubecl", rev = "34625c911c3e07b0438d91bea9af0f2233050589" }
cubecl-runtime = { git = "https://github.com/tracel-ai/cubecl", rev = "34625c911c3e07b0438d91bea9af0f2233050589" }
cubecl-spirv = { git = "https://github.com/tracel-ai/cubecl", rev = "34625c911c3e07b0438d91bea9af0f2233050589" }
cubecl-std = { git = "https://github.com/tracel-ai/cubecl", rev = "34625c911c3e07b0438d91bea9af0f2233050589" }
cubecl-wgpu = { git = "https://github.com/tracel-ai/cubecl", rev = "34625c911c3e07b0438d91bea9af0f2233050589" }
cubecl-zspace = { git = "https://github.com/tracel-ai/cubecl", rev = "34625c911c3e07b0438d91bea9af0f2233050589" }
cubek = { git = "https://github.com/tracel-ai/cubek", rev = "aaa8b1276650e688ac6f46701af1e79cf1c5d112" }
cubek-attention = { git = "https://github.com/tracel-ai/cubek", rev = "aaa8b1276650e688ac6f46701af1e79cf1c5d112" }
cubek-convolution = { git = "https://github.com/tracel-ai/cubek", rev = "aaa8b1276650e688ac6f46701af1e79cf1c5d112" }
cubek-fft = { git = "https://github.com/tracel-ai/cubek", rev = "aaa8b1276650e688ac6f46701af1e79cf1c5d112" }
cubek-matmul = { git = "https://github.com/tracel-ai/cubek", rev = "aaa8b1276650e688ac6f46701af1e79cf1c5d112" }
cubek-quant = { git = "https://github.com/tracel-ai/cubek", rev = "aaa8b1276650e688ac6f46701af1e79cf1c5d112" }
cubek-random = { git = "https://github.com/tracel-ai/cubek", rev = "aaa8b1276650e688ac6f46701af1e79cf1c5d112" }
cubek-reduce = { git = "https://github.com/tracel-ai/cubek", rev = "aaa8b1276650e688ac6f46701af1e79cf1c5d112" }
cubek-std = { git = "https://github.com/tracel-ai/cubek", rev = "aaa8b1276650e688ac6f46701af1e79cf1c5d112" }
cubek-test-utils = { git = "https://github.com/tracel-ai/cubek", rev = "aaa8b1276650e688ac6f46701af1e79cf1c5d112" }

[patch."https://github.com/tracel-ai/burn"]
burn-cubecl = { path = "../../vendor/burn-compat/burn-cubecl" }

[dev-dependencies]

[build-dependencies]
ureq = "3.3"
